fixed navigation bar links alignment

--- a/css/index.css
+++ b/css/index.css
@@ -138,7 +138,7 @@ header {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  padding: 20px 0;
+  padding: 30px 0;
 }
 header h1 {
   font-size: 3.6rem;
@@ -147,6 +147,7 @@ header h1 {
 header nav {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 400px;
 }
 header nav a {
@@ -156,7 +157,6 @@ header nav a {
 /* Home Marketing page */
 .header-image {
   overflow: hidden;
-  margin: 0 auto;
   max-width: 100vw;
   max-height: 80vh;
 }
