--- a/less/home.less
+++ b/less/home.less
@@ -1,7 +1,6 @@
 /* Home Marketing page */
 .header-image {
   overflow: hidden;
-  margin: 0 auto;
   max-width: 100vw;
   max-height: 80vh;
 
