--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,7 +4,7 @@ header {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  padding: 20px 0;
+  padding: 30px 0;
 
   h1 {
     font-size: 3.6rem;
@@ -14,6 +14,7 @@ header {
   nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 400px;
 
     a {
